--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.11.1",
     "@strapi/plugin-users-permissions": "5.11.1",
+    "@strapi/provider-upload-cloudinary": "^5.11.3",
     "@strapi/strapi": "5.11.1",
     "better-sqlite3": "11.3.0",
     "pg": "^8.14.0",
